--- a/практическая 3/index.html
+++ b/практическая 3/index.html
@@ -14,13 +14,13 @@
             <label>Имя</label>
 			<div  class="input-container ">
                     <img src="img/user.png" alt="user" class="ico">
-					<input type="text" name="UserFirstName" required placeholder="FirstName" pattern="[A-Za-zА-Яа-яЁё0-9]{2,12}">
+					<input type="text" name="UserFirstName" required placeholder="FirstName" pattern="[A-Za-zА-Яа-яЁё]{2,12}">
 			</div>
             
             <label>Фамилия</label>
 			<div class="input-container ">
                     <img src="img/user.png" alt="user" class="ico">
-					<input type="text" name="UserLastName" required placeholder="LastName" pattern="[A-Za-zА-Яа-яЁё0-9]{2,16}">
+					<input type="text" name="UserLastName" required placeholder="LastName" pattern="[A-Za-zА-Яа-яЁё]{2,16}">
 			</div>
             
             <label>Ваш логин</label>
